--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
 		<jar jarfile="PolyRallye.jar" basedir="${build}" mergeClassPathAttributes="true">
 			<manifest>
 				<attribute name="Main-Class" value="${mainclass}" />
-				<attribute name="Class-Path" value="lib/lwjgl.jar lib/jdom.jar" />
+				<attribute name="Class-Path" value="lib/lwjgl.jar lib/lwjgl_util.jar lib/jdom.jar VocalyzeSIVOX/bin/SI_VOX.jar" />
 			</manifest>
 		</jar>
 	</target>
