menus, synthèse vocale, boite de vitesse exponentielle avec deux interpolation linéaires, et console en couleur, MOUHAHHAHA

--- a/VocalyzeSIVOX/si_vox_ihm.conf
+++ b/VocalyzeSIVOX/si_vox_ihm.conf
@@ -25,7 +25,7 @@ REPERTOIRE_PHO_WAV=VocalyzeSIVOX/donneesMbrola/pho_wav/
 FICHIER_PHO_WAV=phrase
 FICHIER_PHO_CHANT=chant
 #
-# Dossier des fichiers de règles
+# Dossier des fichiers de rï¿½gles
 CHEMIN_REGLES=VocalyzeSIVOX/donneesMbrola/rules/
 #[Les fichiers de regles de prononciation]
 #
@@ -110,19 +110,19 @@ FREQUENCE_INIT=100
 #
 # Reglage de la vitesse (option -t TR, time ratio)
 # ratio de rapidite. 1 est la vitesse de base du synthetiseur,
-# 0.9 est adapte pour les DV adultes, habitues aux synthèses vocales
+# 0.9 est adapte pour les DV adultes, habitues aux synthï¿½ses vocales
 # 2.0 est deux fois plus lent, 0.5 deux fois plus rapide que 1.0
 #
-RAPIDITE=0.8
+RAPIDITE=0.91
 VOLUME=1.0
 #
-# on n'exploite pas le volume ratio (à verifier): 
+# on n'exploite pas le volume ratio (ï¿½ verifier): 
 #   mbrola fr4 -v 2.0 machin.pho truc.wav
 # Si mbrola.exe est place dans c:/windows/system32
 #    mbrola -h donne les options possibles de la commande
 #    mais dans le fichier pho, on peut donner des commandes
 #    ;xxxx est un commentaire 
-#    mais la ligne ;;T=2.0 règle le time ratio à 2, 
+#    mais la ligne ;;T=2.0 rï¿½gle le time ratio ï¿½ 2, 
 #    idem pour ;;F=2.3, et le frequency ratio
 #    pour ;;V=1.2, cela ne marche pas semble t'il ?
 #
@@ -145,18 +145,18 @@ PAUSE_FIN=200
 #
 # Reglages avances
 # Ecarts entre les paliers de prosodie
-# Ce paramètre modifie de manière grossière l'intonation prise par le robot.
-# Si vous augmentez ce paramètre, la voix devient chantante.
+# Ce paramï¿½tre modifie de maniï¿½re grossiï¿½re l'intonation prise par le robot.
+# Si vous augmentez ce paramï¿½tre, la voix devient chantante.
 # Au contraire, plus vous le descendez, plus la voix devient monocorde et morne
 # La valeur '1' est interessante, et rappellera
-# certains cours d'amphis très monotones !
+# certains cours d'amphis trï¿½s monotones !
 # Une valeur adapte est comprise entre 20 et 30.
 #
 HAUTEUR_PALIER=25
 #
 # Exemples de reglages : 
 # Mode Dark Vador : Frequence  40  Hz, Hauteur de palier 5  unites
-# Mode pre pubère : Frequence  140 Hz, Hauteur de palier 50 unites
+# Mode pre pubï¿½re : Frequence  140 Hz, Hauteur de palier 50 unites
 #
 # Reglage de la prosodie
 #
@@ -167,7 +167,7 @@ PAS_SUITE=6
 MIN_SUITE=5
 MAX_SUITE=5
 #
-# Nombre de variations de pitch maximales pour un Phonème
+# Nombre de variations de pitch maximales pour un Phonï¿½me
 # -------------------------------------------------------
 #
 NB_VARIATIONS_PITCH=1
